--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./style.css" />
   <title>Rock Paper Scissors</title>
 </head>
+
 <body>
+  <h1>Rock Paper Scissors Game</h1>
+  <h3>Please Select Rock, Paper, or Scissors</h3>
+  <div id="container">
+    <button id="rock"><img src="assets/rock.png" width="50%"></button><br />
+    <button id="paper"><img src="assets/paper.png" width="50%"></button><br />
+    <button id=" scissors"><img src="assets/scissors.png" width="50%"></button><br />
+  </div>
 
-
-  <script src="app.js"></script>
+  <script src=" app.js"></script>
 </body>
+
 </html>
