--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -13,9 +13,13 @@
   <div id="container">
     <button id="rock"><img src="assets/rock.png" width="50%"></button><br />
     <button id="paper"><img src="assets/paper.png" width="50%"></button><br />
-    <button id=" scissors"><img src="assets/scissors.png" width="50%"></button><br />
+    <button id="scissors"><img src="assets/scissors.png" width="50%"></button><br />
   </div>
+  <br />
+  <div id="text">
 
+  </div>
+  <div id="game_over_text"></div>
   <script src=" app.js"></script>
 </body>
 
