--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -7,20 +7,20 @@
   <title>Rock Paper Scissors</title>
 </head>
 
-<body>
+<body align="center">
   <h1>Rock Paper Scissors Game</h1>
   <h3>Please Select Rock, Paper, or Scissors</h3>
   <div id="container">
-    <button id="rock"><img src="assets/rock.png" width="50%"></button><br />
-    <button id="paper"><img src="assets/paper.png" width="50%"></button><br />
-    <button id="scissors"><img src="assets/scissors.png" width="50%"></button><br />
+    <button id="rock"><img src="assets/rock.png" height="100" width="100"></button>
+    <button id="paper"><img src="assets/paper.png" height="100" width="100"></button>
+    <button id="scissors"><img src="assets/scissors.png" height="100" width="100"></button>
   </div>
   <br />
   <div id="text">
 
   </div>
   <div id="game_over_text"></div>
-  <script src=" app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
